Updated address of print

--- a/_source/LigaCancer/Views/Patient/Print.cshtml
+++ b/_source/LigaCancer/Views/Patient/Print.cshtml
@@ -31,7 +31,7 @@
 
             <div class="col-9 text-center">
                 <p class="h1">Rede Videirense de Combate ao Câncer</p>
-                <p class="h3">Rua Lauro Muller, 288</p>
+                <p class="h3">Coronel Fagundes 148, centro</p>
                 <p class="h3">Videira-SC</p>
                 <p class="h6">@DateTime.Now</p>
             </div>
