Update size of chart on homepage and change footer credits to doffs

--- a/_source/LigaCancer/Views/Home/Index.cshtml
+++ b/_source/LigaCancer/Views/Home/Index.cshtml
@@ -46,9 +46,9 @@
                     </div>
                     <!-- /.row-->
                     <div class="chart-wrapper">
-                        <canvas class="chart" id="dayChart"style="display: none;"></canvas>
-                        <canvas class="chart" id="monthChart"></canvas>
-                        <canvas class="chart" id="yearChart" style="display: none;"></canvas>
+                        <canvas class="chart" style="max-height: 64vh; display: none;" id="dayChart"></canvas>
+                        <canvas class="chart" style="max-height:64vh;" id="monthChart"></canvas>
+                        <canvas class="chart" style="max-height:64vh; display: none;" id="yearChart"></canvas>
                     </div>
                 </div>
                 <div class="card-footer">
