--- a/_source/LigaCancer/Views/Shared/_Layout.cshtml
+++ b/_source/LigaCancer/Views/Shared/_Layout.cshtml
@@ -130,7 +130,7 @@
     <footer class="app-footer">
         <div class="ml-auto">
             <span>Desenvolvido por</span>
-            <a href="https://www.linkedin.com/in/felipe-pergher" target="_blank">Felipe Pergher</a>
+            <a href="https://doffs.com.br" target="_blank">Doffs</a>
         </div>
     </footer>
 
