#559 readed xg size and implemented sort and filter options on table. Added option to print order

--- a/_source/LigaCancer/Views/SaleShirt2020/Index.cshtml
+++ b/_source/LigaCancer/Views/SaleShirt2020/Index.cshtml
@@ -1,4 +1,5 @@
-﻿@model RVCC.Models.SearchModel.SaleShirt2020SearchModel
+﻿@using RVCC.Business
+@model RVCC.Models.SearchModel.SaleShirt2020SearchModel
 @{
     ViewData["Title"] = "Camisetas 2020";
 }
@@ -40,7 +41,15 @@
                                     <div class="form-row form-group">
                                         <div class="col-lg-3">
                                             <label asp-for="Code"></label>
-                                            <input asp-for="Code" class="form-control" placeholder="@Html.DisplayFor(x => x.Code)" />
+                                            <input asp-for="Code" class="form-control" placeholder="@Html.DisplayNameFor(x => x.Code)" />
+                                        </div>
+                                        <div class="col-lg-3">
+                                            <label asp-for="Name"></label>
+                                            <input asp-for="Name" class="form-control" placeholder="@Html.DisplayNameFor(x => x.Name)" />
+                                        </div>
+                                        <div class="col-lg-3">
+                                            <label asp-for="States"></label>
+                                            <select asp-for="States" class="form-control select2" multiple placeholder="@Html.DisplayNameFor(x => x.States)" asp-items="Html.GetEnumSelectList<Enums.Status>()"></select>
                                         </div>
                                         <div class="col-lg-3 filter-button">
                                             <button type="reset" class="btn btn-secondary">
