--- a/_source/LigaCancer/src/sass/sale-shirt-2020/index.scss
+++ b/_source/LigaCancer/src/sass/sale-shirt-2020/index.scss
@@ -1,5 +1,7 @@
 ﻿@import '~datatables.net-bs4/css/datatables.bootstrap4.min.css';
 @import "~bootstrap-datepicker/dist/css/bootstrap-datepicker.min";
+@import '~select2/dist/css/select2.min.css';
+@import 'select2-theme-bootstrap4/src/build';
 
 .modal-elg {
     max-width: 1000px;
