--- a/_source/LigaCancer/Views/SaleShirt2020/Partials/_AddSaleShirt2020.cshtml
+++ b/_source/LigaCancer/Views/SaleShirt2020/Partials/_AddSaleShirt2020.cshtml
@@ -69,6 +69,14 @@
                 </div>
             </div>
 
+            <div class="col">
+                <div class="form-group">
+                    <label asp-for="SizeXGNormalQuantity" class="control-label"></label>
+                    <input asp-for="SizeXGNormalQuantity" class="form-control shirtQuantity" min="0" />
+                    <span asp-validation-for="SizeXGNormalQuantity" class="text-danger"></span>
+                </div>
+            </div>
+
         </div>
 
         <hr />
@@ -126,7 +134,7 @@
 
         <div class="row">
             <div class="col-12">
-                <h5>Camiseta Baby look</h5>
+                <h5>Baby look</h5>
             </div>
         </div>
 
@@ -160,6 +168,14 @@
                     <label asp-for="SizeGGBabyLookQuantity" class="control-label"></label>
                     <input asp-for="SizeGGBabyLookQuantity" class="form-control shirtQuantity" min="0" />
                     <span asp-validation-for="SizeGGBabyLookQuantity" class="text-danger"></span>
+                </div>
+            </div>
+            
+            <div class="col">
+                <div class="form-group">
+                    <label asp-for="SizeXGBabyLookQuantity" class="control-label"></label>
+                    <input asp-for="SizeXGBabyLookQuantity" class="form-control shirtQuantity" min="0" />
+                    <span asp-validation-for="SizeXGBabyLookQuantity" class="text-danger"></span>
                 </div>
             </div>
         </div>
