#559 adding size 6 and 10 to younger shirts

--- a/_source/LigaCancer/Views/SaleShirt2020/Partials/_DetailsSaleShirt2020.cshtml
+++ b/_source/LigaCancer/Views/SaleShirt2020/Partials/_DetailsSaleShirt2020.cshtml
@@ -117,11 +117,25 @@
                 <input disabled asp-for="Size4NormalQuantity" class="form-control shirtQuantity" min="0" />
             </div>
         </div>
+        
+        <div class="col">
+            <div class="form-group">
+                <label asp-for="Size6NormalQuantity" class="control-label"></label>
+                <input disabled asp-for="Size6NormalQuantity" class="form-control shirtQuantity" min="0" />
+            </div>
+        </div>
 
         <div class="col">
             <div class="form-group">
                 <label asp-for="Size8NormalQuantity" class="control-label"></label>
                 <input disabled asp-for="Size8NormalQuantity" class="form-control shirtQuantity" min="0" />
+            </div>
+        </div>
+        
+        <div class="col">
+            <div class="form-group">
+                <label asp-for="Size10NormalQuantity" class="control-label"></label>
+                <input disabled asp-for="Size10NormalQuantity" class="form-control shirtQuantity" min="0" />
             </div>
         </div>
 
