--- a/_source/LigaCancer/Views/SaleShirt2020/Partials/_AddSaleShirt2020.cshtml
+++ b/_source/LigaCancer/Views/SaleShirt2020/Partials/_AddSaleShirt2020.cshtml
@@ -95,12 +95,28 @@
                     <span asp-validation-for="Size4NormalQuantity" class="text-danger"></span>
                 </div>
             </div>
+            
+            <div class="col">
+                <div class="form-group">
+                    <label asp-for="Size6NormalQuantity" class="control-label"></label>
+                    <input asp-for="Size6NormalQuantity" class="form-control shirtQuantity" min="0" />
+                    <span asp-validation-for="Size6NormalQuantity" class="text-danger"></span>
+                </div>
+            </div>
 
             <div class="col">
                 <div class="form-group">
                     <label asp-for="Size8NormalQuantity" class="control-label"></label>
                     <input asp-for="Size8NormalQuantity" class="form-control shirtQuantity" min="0" />
                     <span asp-validation-for="Size8NormalQuantity" class="text-danger"></span>
+                </div>
+            </div>
+            
+            <div class="col">
+                <div class="form-group">
+                    <label asp-for="Size10NormalQuantity" class="control-label"></label>
+                    <input asp-for="Size10NormalQuantity" class="form-control shirtQuantity" min="0" />
+                    <span asp-validation-for="Size10NormalQuantity" class="text-danger"></span>
                 </div>
             </div>
 
