#562 added total quantity and value to footer table in shirt sales

--- a/_source/LigaCancer/Views/SaleShirt2020/Index.cshtml
+++ b/_source/LigaCancer/Views/SaleShirt2020/Index.cshtml
@@ -75,7 +75,21 @@
                                     </a>
                                 </div>
 
-                                <table width="100%" class="table table-bordered table-striped text-center" id="saleShirt2020Table"></table>
+                                <table width="100%" class="table table-bordered table-striped text-center" id="saleShirt2020Table">
+                                    <tfoot>
+                                        <tr>
+                                            <th></th>
+                                            <th></th>
+                                            <th></th>
+                                            <th></th>
+                                            <th></th>
+                                            <th></th>
+                                            <th></th>
+                                            <th></th>
+                                            <th></th>
+                                        </tr>
+                                    </tfoot>
+                                </table>
                             </div>
                         </div>
                     </div>
