#563 added size 2 and statistics below the table

--- a/_source/LigaCancer/Views/SaleShirt2020/Index.cshtml
+++ b/_source/LigaCancer/Views/SaleShirt2020/Index.cshtml
@@ -1,5 +1,6 @@
 ﻿@using RVCC.Business
-@model RVCC.Models.SearchModel.SaleShirt2020SearchModel
+@using RVCC.Models.SearchModel
+@model RVCC.Models.ViewModel.SaleShirt2020DataViewModel
 @{
     ViewData["Title"] = "Camisetas 2020";
 }
@@ -37,30 +38,7 @@
                                 </div>
                             </div>
                             <div class="card-body collapse show" id="filterCollapse">
-                                <form id="searchForm">
-                                    <div class="form-row form-group">
-                                        <div class="col-lg-3">
-                                            <label asp-for="Code"></label>
-                                            <input asp-for="Code" class="form-control" placeholder="@Html.DisplayNameFor(x => x.Code)" />
-                                        </div>
-                                        <div class="col-lg-3">
-                                            <label asp-for="Name"></label>
-                                            <input asp-for="Name" class="form-control" placeholder="@Html.DisplayNameFor(x => x.Name)" />
-                                        </div>
-                                        <div class="col-lg-3">
-                                            <label asp-for="States"></label>
-                                            <select asp-for="States" class="form-control select2" multiple placeholder="@Html.DisplayNameFor(x => x.States)" asp-items="Html.GetEnumSelectList<Enums.Status>()"></select>
-                                        </div>
-                                        <div class="col-lg-3 filter-button">
-                                            <button type="reset" class="btn btn-secondary">
-                                                <i class="fas fa-eraser"></i> Limpar
-                                            </button>
-                                            <button type="submit" class="btn btn-primary">
-                                                <i class="fas fa-filter"></i> Filtrar
-                                            </button>
-                                        </div>
-                                    </div>
-                                </form>
+                                <partial name="Partials/_SearchForm" model="new SaleShirt2020SearchModel()" />
                             </div>
                         </div>
 
@@ -90,6 +68,11 @@
                                         </tr>
                                     </tfoot>
                                 </table>
+
+                                <hr />
+                                
+                                <h3 class="text-center">Estatísticas</h3>
+                                <partial name="Partials/_DetailTable" />
                             </div>
                         </div>
                     </div>
