--- a/_source/LigaCancer/Views/SaleShirt2020/Partials/_AddSaleShirt2020.cshtml
+++ b/_source/LigaCancer/Views/SaleShirt2020/Partials/_AddSaleShirt2020.cshtml
@@ -90,12 +90,20 @@
         <div class="row">
             <div class="col">
                 <div class="form-group">
+                    <label asp-for="Size2NormalQuantity" class="control-label"></label>
+                    <input asp-for="Size2NormalQuantity" class="form-control shirtQuantity" min="0" />
+                    <span asp-validation-for="Size2NormalQuantity" class="text-danger"></span>
+                </div>
+            </div>
+
+            <div class="col">
+                <div class="form-group">
                     <label asp-for="Size4NormalQuantity" class="control-label"></label>
                     <input asp-for="Size4NormalQuantity" class="form-control shirtQuantity" min="0" />
                     <span asp-validation-for="Size4NormalQuantity" class="text-danger"></span>
                 </div>
             </div>
-            
+
             <div class="col">
                 <div class="form-group">
                     <label asp-for="Size6NormalQuantity" class="control-label"></label>
@@ -111,7 +119,7 @@
                     <span asp-validation-for="Size8NormalQuantity" class="text-danger"></span>
                 </div>
             </div>
-            
+
             <div class="col">
                 <div class="form-group">
                     <label asp-for="Size10NormalQuantity" class="control-label"></label>
@@ -186,7 +194,7 @@
                     <span asp-validation-for="SizeGGBabyLookQuantity" class="text-danger"></span>
                 </div>
             </div>
-            
+
             <div class="col">
                 <div class="form-group">
                     <label asp-for="SizeXGBabyLookQuantity" class="control-label"></label>
