--- a/_source/LigaCancer/Views/SaleShirt2020/PublicDetailsSaleShirt2020.cshtml
+++ b/_source/LigaCancer/Views/SaleShirt2020/PublicDetailsSaleShirt2020.cshtml
@@ -125,6 +125,13 @@
                                 <div class="row">
                                     <div class="col">
                                         <div class="form-group">
+                                            <label asp-for="Size2NormalQuantity" class="control-label"></label>
+                                            <input disabled asp-for="Size2NormalQuantity" class="form-control shirtQuantity" min="0" />
+                                        </div>
+                                    </div>
+
+                                    <div class="col">
+                                        <div class="form-group">
                                             <label asp-for="Size4NormalQuantity" class="control-label"></label>
                                             <input disabled asp-for="Size4NormalQuantity" class="form-control shirtQuantity" min="0" />
                                         </div>
@@ -143,7 +150,7 @@
                                             <input disabled asp-for="Size8NormalQuantity" class="form-control shirtQuantity" min="0" />
                                         </div>
                                     </div>
-                                    
+
                                     <div class="col">
                                         <div class="form-group">
                                             <label asp-for="Size10NormalQuantity" class="control-label"></label>
