--- a/_source/LigaCancer/Views/FileAttachment/Partials/_Index.cshtml
+++ b/_source/LigaCancer/Views/FileAttachment/Partials/_Index.cshtml
@@ -1,11 +1,11 @@
 ﻿@model RVCC.Models.SearchModel.FileAttachmentSearchModel
 
 <div class="card">
-    <div class="card-header">
+    <div class="card-header" data-toggle="collapse" data-target="#filesCollapse" aria-expanded="true">
         <i class="fa fa-male"></i>Arquivos
 
         <div class="card-header-actions">
-            <a class="card-header-action btn-minimize" href="#" data-toggle="collapse" data-target="#filesCollapse" aria-expanded="true">
+            <a class="card-header-action btn-minimize" href="#">
                 <i class="fa fa-minus"></i>
             </a>
         </div>
