--- a/_source/LigaCancer/Views/Phone/Partials/_Index.cshtml
+++ b/_source/LigaCancer/Views/Phone/Partials/_Index.cshtml
@@ -2,11 +2,11 @@
 @model RVCC.Models.SearchModel.PhoneSearchModel
 
 <div class="card">
-    <div class="card-header">
+    <div class="card-header" data-toggle="collapse" data-target="#phoneCollapse" aria-expanded="true">
         <i class="fa fa-male"></i>Telefones
 
         <div class="card-header-actions">
-            <a class="card-header-action btn-minimize" href="#" data-toggle="collapse" data-target="#phoneCollapse" aria-expanded="true">
+            <a class="card-header-action btn-minimize" href="#">
                 <i class="fa fa-minus"></i>
             </a>
         </div>
