--- a/_source/LigaCancer/Views/Stay/Partials/_Index.cshtml
+++ b/_source/LigaCancer/Views/Stay/Partials/_Index.cshtml
@@ -1,9 +1,9 @@
 ﻿<div class="card">
-    <div class="card-header">
+    <div class="card-header" data-toggle="collapse" data-target="#stayCollapse" aria-expanded="true">
         <i class="fa fa-male"></i>Estadias
 
         <div class="card-header-actions">
-            <a class="card-header-action btn-minimize" href="#" data-toggle="collapse" data-target="#stayCollapse" aria-expanded="true">
+            <a class="card-header-action btn-minimize" href="#">
                 <i class="fa fa-minus"></i>
             </a>
         </div>
