--- a/_source/LigaCancer/Views/Patient/Partials/_PatientProfile.cshtml
+++ b/_source/LigaCancer/Views/Patient/Partials/_PatientProfile.cshtml
@@ -1,5 +1,8 @@
 ﻿@using RVCC.Business
 @model RVCC.Models.FormModel.PatientProfileFormModel
+@{
+    var isEdit = Model.PatientId > 0;
+}
 
 <div class="modal-body">
     <input asp-for="PatientId" />
@@ -26,17 +29,28 @@
         </div>
         <div class="form-group col-md-6">
             <label asp-for="Profession" class="control-label"></label>
-            <input asp-for="Profession" class="form-control"/>
+            <input asp-for="Profession" class="form-control" />
             <span asp-validation-for="Profession" class="text-danger"></span>
         </div>
-        <div class="form-group col-md-6">
-            <label asp-for="MonthlyIncome" class="control-label"></label>
-            <input asp-for="MonthlyIncome" class="form-control" />
+
+        @if (isEdit)
+        {
+            <div class="form-group col-md-3">
+                <label asp-for="MonthlyIncome" class="control-label"></label>
+                <input asp-for="MonthlyIncome" class="form-control" disabled />
+                <span asp-validation-for="MonthlyIncome" class="text-danger"></span>
+            </div>
+        }
+
+        <div class="form-group @(isEdit ? "col-md-3" : "col-md-6")">
+            <label asp-for="MonthlyIncomeMinSalary" class="control-label"></label>
+            <input asp-for="MonthlyIncomeMinSalary" class="form-control" />
             <span asp-validation-for="MonthlyIncome" class="text-danger"></span>
         </div>
+
         <div class="form-group col-md-6">
             <label asp-for="Sex" class="control-label"></label>
-            <select asp-for="Sex" asp-items="Html.GetEnumSelectList<Enums.Sex>()" class="form-control" ></select>
+            <select asp-for="Sex" asp-items="Html.GetEnumSelectList<Enums.Sex>()" class="form-control"></select>
             <span asp-validation-for="Sex" class="text-danger"></span>
         </div>
         <div class="form-group col-md-6">
@@ -48,12 +62,12 @@
         </div>
         <div class="form-group col-md-6">
             <label asp-for="DateOfBirth" class="control-label label-required"></label>
-            <input asp-for="DateOfBirth" type="text" class="form-control"/>
+            <input asp-for="DateOfBirth" type="text" class="form-control" />
             <span asp-validation-for="DateOfBirth" class="text-danger"></span>
         </div>
         <div class="form-group col-md-6">
             <label asp-for="JoinDate" class="control-label label-required"></label>
-            <input asp-for="JoinDate" type="text" class="form-control"/>
+            <input asp-for="JoinDate" type="text" class="form-control" />
             <span asp-validation-for="JoinDate" class="text-danger"></span>
         </div>
         <div class="form-group col-md-6 pt-4">
@@ -68,4 +82,4 @@
     </div>
 </div>
 
-<partial name="_ModalFooter"  />
+<partial name="_ModalFooter" />
