--- a/_source/LigaCancer/Views/Shared/_Layout.cshtml
+++ b/_source/LigaCancer/Views/Shared/_Layout.cshtml
@@ -128,6 +128,12 @@
                                 <i class="nav-icon fa fa-users"></i> Usuários
                             </a>
                         </li>
+
+                        <li class="nav-item">
+                            <a asp-action="Index" asp-controller="Admin" class="nav-link">
+                                <i class="nav-icon fa fa-cog"></i> Admin
+                            </a>
+                        </li>
                     }
                 </ul>
             </nav>
